Add google site verification materials

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,8 @@
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
+  <meta name="google-site-verification" content="Vx2CUNVuAaqJ5PMeqXl4G6XYXRRToQo4C0rsjvZx1O0" />
+
   <title>
     {% if page.title == "Home" %}
       {{ site.title }}
